@@ -1,18 +1,30 @@
 #pragma once
 
+#include "length_string.h"
 #include "pch.h"
 
-#include "context.h"
+#include "hashmap.h"
 
-// i need to rework the atom system, but i have better things to do currently
+typedef struct atom_manager {
+        struct hashmap *cache;
+} atom_manager_t;
 
-// oh boi its time to abuse macros
 typedef struct atom_item {
         const char *name;
-        size_t len;
-        xcb_atom_t *atom;
+        xcb_atom_t atom;
 } atom_item_t;
 
+void atom_manager_init(void);
+
+void load_atoms(xcb_connection_t *connection, const char **names, int len,
+                bool only_if_exists);
+
+xcb_atom_t get_atom(const char *name);
+xcb_atom_t get_atom_or_fallback(const char *name, xcb_atom_t *fallback);
+
+void atom_manager_free(void);
+
+// these atoms will be accessible everywhere, without the need to call get_atom
 #define ATOM_COUNT 4
 #define ATOMS(X)                                                               \
     X(_XROOTPMAP_ID)                                                           \
@@ -21,21 +33,10 @@ typedef struct atom_item {
     X(_NET_WM_WINDOW_TYPE_DESKTOP)                                             \
     X(_NET_WM_DESKTOP)
 
+// the actuall atoms are created in atoms.c
 #define X(atom_name) extern xcb_atom_t atom_name;
 ATOMS(X)
 #undef X
 
-/// todo: document this
-typedef struct load_atom_config {
-        bool only_if_exists;
-        const char **filters;
-        unsigned int filter_len;
-        bool override;
-} load_atoms_config_t;
-
-/// loads atoms from the x server, if args is NULL than
-/// args is ignored
-void load_atoms(context_t *context, load_atoms_config_t *config);
-
-/// returns the value of an atom
-void *get_atom_value(context_t *context, xcb_atom_t *atom);
+/// must be called to load the entire atom list
+void load_atom_list(xcb_connection_t *connection, bool only_if_exists);
